--- a/app.json
+++ b/app.json
@@ -99,7 +99,7 @@
     },
     "TMP_DOWNLOAD_DIRECTORY": {
       "description": "Download location for many modules (GDrive, .download etc..)",
-      "value": "./downloads/"
+      "value": "./downloads"
     },
     "CLEAN_WELCOME": {
       "description": "When a new person joins, the old welcome message is deleted.",
